--- a/k8s/prometheus-federation/services/alertmanager-tls-ingress.yml
+++ b/k8s/prometheus-federation/services/alertmanager-tls-ingress.yml
@@ -15,7 +15,7 @@ spec:
   - host: alertmanager.{{GCLOUD_PROJECT}}.measurementlab.net
     http:
       paths:
-      - path: /*
+      - path: /
         backend:
           serviceName: alertmanager-tls-service
           servicePort: 9093
