--- a/k8s/prometheus-federation/services/alertmanager-tls-ingress.yml
+++ b/k8s/prometheus-federation/services/alertmanager-tls-ingress.yml
@@ -6,6 +6,9 @@ metadata:
   annotations:
     kubernetes.io/tls-acme: "true"
     kubernetes.io/ingress.class: "nginx"
+    nginx.ingress.kubernetes.io/auth-type: basic
+    nginx.ingress.kubernetes.io/auth-secret: prometheus-auth
+    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
 spec:
   tls:
   - hosts:
