Moves IPv6 blackbox_exporter target files into their own directory.

--- a/config/federation/prometheus/prometheus.yml.template
+++ b/config/federation/prometheus/prometheus.yml.template
@@ -389,7 +389,7 @@ scrape_configs:
 
     file_sd_configs:
       - files:
-          - /blackbox-targets/*_ipv6.json
+          - /blackbox-targets-ipv6/*.json
         # Attempt to re-read files every five minutes.
         refresh_interval: 5m
 
