--- a/k8s/prometheus-federation/mlab-oti.yml
+++ b/k8s/prometheus-federation/mlab-oti.yml
@@ -6,3 +6,4 @@ PROMETHEUS_CPU: 6000m
 PROMETHEUS_VOLUME_SIZE: 400Gi
 EXTERNAL_IP: 35.184.81.106
 TLS_EMAIL: support@measurementlab.net
+TLS_IP: 35.194.63.109
