--- a/k8s/prometheus-federation/roles/rbac-kube-lego.yml
+++ b/k8s/prometheus-federation/roles/rbac-kube-lego.yml
@@ -55,6 +55,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: kube-lego
+  namespace: kube-lego
 ---
 # Bind the kube-lego ServiceAccount to the ClusterRole above.
 apiVersion: rbac.authorization.k8s.io/v1beta1
