--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -369,15 +369,27 @@ ALERT ParserDailyVolumeTooLow
     url = "http://status.mlab-oti.measurementlab.net:3000/dashboard/file/Alert_ParserDailyVolumeTooLow.json"
   }
 
-# Nagios is not running on nagios[-oam].measurementlab.net.
+# Nagios exporter is not responding.
 ALERT NagiosExporterDown
-  IF nagios_livestatus_available{job="nagios-oam-exporter"} == 0 OR nagios_livestatus_available{job="nagios-exporter"} == 0
+  IF up{job="nagios-oam-exporter"} == 0 OR up{job="nagios-exporter"} == 0
   FOR 10m
   LABELS {
     severity = "ticket"
   }
   ANNOTATIONS {
     summary = "The Nagios exporter instance is down on {{ $labels.instance }}.",
+    hints = "The Nagios exporter instance runs in a Linode VM."
+  }
+
+# Nagios is not running on nagios[-oam].measurementlab.net.
+ALERT NagiosExporterUnavailable
+  IF nagios_livestatus_available{job="nagios-oam-exporter"} == 0 OR nagios_livestatus_available{job="nagios-exporter"} == 0
+  FOR 10m
+  LABELS {
+    severity = "ticket"
+  }
+  ANNOTATIONS {
+    summary = "The Nagios exporter instance is unavailable on {{ $labels.instance }}.",
     hints = "The Nagios exporter instance runs in a Linode VM."
   }
 
