--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -312,6 +312,61 @@ ALERT ScriptExporterMissingMetrics
     dashboard = "http://status.mlab-oti.measurementlab.net:3000/dashboard/file/Ops_SwitchOverview.json"
   }
 
+# One or more NDT-specific metrics is missing. These are the NDT metrics that
+# mlab-ns relies on to determine whether NDT is up and running, so we need to
+# make sure that the metrics are always present. NOTE: mlab-ns additionally
+# relies on the script_exporter metric 'script_success{service="ndt_e2e"}', but
+# alerting for that metric is already handled by the
+# ScriptExporterMissingMetrics alert.
+ALERT NdtMetricsMissing
+  IF absent(probe_success{service="ndt_raw"})
+        OR absent(probe_success{service="ndt_raw_ipv6"})
+        OR absent(probe_success{service="ndt_ssl"})
+        OR absent(probe_success{service="ndt_ssl_ipv6"})
+        OR absent(vdlimit_used{experiment="ndt.iupui"})
+        OR absent(vdlimit_total{experiment="ndt.iupui"})
+  FOR 30m
+  LABELS {
+    severity = "page"
+  }
+  ANNOTATIONS {
+    summary = "A metric for an NDT service is missing.",
+    hints = "If the blackbox_exporter service is running, then there may be a target configuration error. Check the target definitions in GCS and the target status in Prometheus. vdlimit_* metrics are provided by node_exporter on each node.",
+    prometheus_targets = "https://prometheus.mlab-oti.measurementlab.net/targets#job-blackbox-targets"
+  }
+
+# One or more Neubot-specific metrics is missing. These are the Neubot metrics that
+# mlab-ns relies on to determine whether Neubot is up and running, so we need to
+# make sure that the metrics are always present.
+ALERT NeubotMetricsMissing
+  IF absent(probe_success{service="neubot"})
+        OR absent(probe_success{service="neubot_ipv6"})
+  FOR 30m
+  LABELS {
+    severity = "page"
+  }
+  ANNOTATIONS {
+    summary = "A metric for a Neubot service is missing.",
+    hints = "If the blackbox_exporter service is running, then there may be a target configuration error. Check the target definitions in GCS and the target status in Prometheus.",
+    prometheus_targets = "https://prometheus.mlab-oti.measurementlab.net/targets#job-blackbox-targets"
+  }
+
+# One or more Mobiperf-specific metrics is missing. These are the Mobiperf
+# metrics that mlab-ns relies on to determine whether Mobiperf is up and
+# running, so we need to make sure that the metrics are always present.
+ALERT MobiperfMetricsMissing
+  IF absent(probe_success{service="mobiperf"})
+        OR absent(probe_success{service="mobiperf_ipv6"})
+  FOR 30m
+  LABELS {
+    severity = "page"
+  }
+  ANNOTATIONS {
+    summary = "A metric for a Mobiperf service is missing.",
+    hints = "If the blackbox_exporter service is running, then there may be a target configuration error. Check the target definitions in GCS and the target status in Prometheus.",
+    prometheus_targets = "https://prometheus.mlab-oti.measurementlab.net/targets#job-blackbox-targets"
+  }
+
 # TODO:
 #   Replace this with two other alerts:
 #    1.  Alert if hourly test volume on servers drops relative to same hour on recent days.
