Adds a comma where one was missing, causing the query_tester to fail.

--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -540,7 +540,7 @@ ALERT NodeExporterOnEbDownorMissing
     severity = "ticket"
   }
   ANNOTATIONS {
-    summary = "The node_exporter instance running on eb.measurementlab.net is down."
+    summary = "The node_exporter instance running on eb.measurementlab.net is down.",
     hints = "Login to EB to see if it is in fact crashed. If so, look through the logs."
   }
 
