--- a/k8s/prometheus-federation/deployments/blackbox.yml
+++ b/k8s/prometheus-federation/deployments/blackbox.yml
@@ -23,7 +23,7 @@ spec:
         run: blackbox-server
       annotations:
         # Tell prometheus service discovery to scrape the blackbox container.
-        prometheus.io/scrape: 'true'
+        prometheus.io/scrape: 'false'
     spec:
       # Place the pod into the Guaranteed QoS by setting equal resource
       # requests and limits for *all* containers in the pod.
