--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -313,10 +313,10 @@ ALERT ScriptExporterMissingMetrics
   }
 
 # Prometheus is unable to get data from the blackbox_exporter service for IPv4
-# probes.
+# probes. The service is down, or the metric is missing.
 ALERT BlackboxExporterIpv4DownOrMissing
-  IF up{deployment="blackbox-server"} == 0
-        OR absent(up{deployment="blackbox-server"})
+  IF up{job="blackbox-exporter-ipv4"} == 0
+        OR absent(up{job="blackbox-exporter-ipv4"})
   FOR 10m
   LABELS {
     severity = "ticket"
@@ -534,7 +534,7 @@ ALERT NagiosExporterMissing
   }
 
 # The node_exporter running on eb.measurementlab.net is down.
-ALERT NodeExporterOnEbDownorMissing
+ALERT NodeExporterOnEbDownOrMissing
   IF up{job="eb-node-exporter"} == 0 OR absent(up{job="eb-node-exporter"})
   FOR 10m
   LABELS {
