--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -455,7 +455,7 @@ ALERT Coreservices_CollectdMlabDown
 
 # A collectd-mlab service metric is missing on some node.
 ALERT Coreservices_CollectdMlabMissing
-  up{service="nodeexporter"} == 1
+  IF up{service="nodeexporter"} == 1
         UNLESS ON(machine) collectd_mlab_success{}
   FOR 10m
   LABELS {
