Removes the count() function from the LameDuckMtericMissingForNode alert, since it was superfluous, and more importantly was not passing through needed labels to the alert.

--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -429,9 +429,8 @@ ALERT MobiperfMetricsMissing
 
 # Some number of nodes don't have a lame-duck status.
 ALERT LameDuckMetricMissingForNode
-  IF count(
-    up{service="nodeexporter"} == 1 UNLESS ON(machine) lame_duck_node{}
-  ) > 0
+  IF up{service="nodeexporter"} == 1
+        UNLESS ON(machine) lame_duck_node{}
   FOR 30m
   LABELS {
     severity = "ticket"
