--- a/k8s/prometheus-federation/deployments/github-receiver.yml
+++ b/k8s/prometheus-federation/deployments/github-receiver.yml
@@ -26,6 +26,6 @@ spec:
               key: auth-token
         args: [ "-authtoken=$(GITHUB_AUTH_TOKEN)",
                 "-owner=m-lab",
-                "-repo=dev-tracker" ]
+                "-repo=scraper" ]
         ports:
         - containerPort: 9393
