Use github receiver with repo routing

--- a/k8s/prometheus-federation/deployments/github-receiver.yml
+++ b/k8s/prometheus-federation/deployments/github-receiver.yml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - name: github-receiver
-        image: measurementlab/alertmanager-github-receiver:v0.2
+        image: measurementlab/alertmanager-github-receiver:v0.3
         env:
         - name: GITHUB_AUTH_TOKEN
           valueFrom:
@@ -25,7 +25,7 @@ spec:
               name: github-secrets
               key: auth-token
         args: [ "-authtoken=$(GITHUB_AUTH_TOKEN)",
-                "-owner=m-lab",
+                "-org=m-lab",
                 "-repo=dev-tracker" ]
         ports:
         - containerPort: 9393
