Fixes a syntax error in alerts.yml (missing comma).

--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -309,7 +309,7 @@ ALERT SnmpScrapingDownAtSite
     repo = "ops-tracker"
   }
   ANNOTATIONS {
-    summary = "Prometheus is unable to scrape SNMP metrics from a switch."
+    summary = "Prometheus is unable to scrape SNMP metrics from a switch.",
     hints = "Maybe the switch is down? Is the snmp_exporter using the right community string? Look in switch-details.json in the m-lab/switch-config repo. Is the IP of the snmp_exporter VM in GCE whitelisted on the switch?"
   }
 
